--- a/language/de_DE.po
+++ b/language/de_DE.po
@@ -2,10 +2,11 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Associated Posts Lite\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2012-03-02 09:31+0100\n"
+"POT-Creation-Date: 2012-06-18 20:22+0100\n"
 "PO-Revision-Date: \n"
-"Last-Translator: Dennis Hoppe\n"
+"Last-Translator: Dennis Hoppe <mail@DennisHoppe.de>\n"
 "Language-Team: Dennis Hoppe\n"
+"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -14,71 +15,6 @@ msgstr ""
 "X-Poedit-Basepath: .\n"
 "X-Poedit-KeywordsList: t;t:2c,1\n"
 "X-Poedit-SearchPath-0: ..\n"
-
-#: ../wp-plugin-associated-posts-lite.php:116
-msgid "Associated Posts Options"
-msgstr "Einstellungen für Assoziierte Artikel"
-
-#: ../wp-plugin-associated-posts-lite.php:117
-#: ../wp-plugin-associated-posts-lite.php:188
-#: ../wp-plugin-associated-posts-lite.php:603
-#: ../wp-plugin-associated-posts-lite.php:614
-#: ../wp-plugin-associated-posts-lite.php:626
-#: ../options-page.php:3
-msgid "Associated Posts"
-msgstr "Assoziierte Artikel"
-
-#: ../wp-plugin-associated-posts-lite.php:124
-msgid "Position"
-msgstr "Position"
-
-#: ../wp-plugin-associated-posts-lite.php:125
-msgid "Templates"
-msgstr "Vorlagen"
-
-#: ../wp-plugin-associated-posts-lite.php:126
-msgid "Add a Template"
-msgstr "Vorlage hinzufügen"
-
-#: ../wp-plugin-associated-posts-lite.php:127
-msgid "Association Interface"
-msgstr "Assoziationsoberfläche"
-
-#: ../wp-plugin-associated-posts-lite.php:128
-msgid "Selectable Taxonomies"
-msgstr "Auswählbare Klassifizierungen"
-
-#: ../wp-plugin-associated-posts-lite.php:129
-msgid "Miscellaneous"
-msgstr "Sonstiges"
-
-#: ../wp-plugin-associated-posts-lite.php:577
-#, php-format
-msgid "Sorry, this feature is only available in the <a href=\"%s\" target=\"_blank\">Pro Version of Associated Posts</a>."
-msgstr "Entschuldigung, diese Funktion gibt es nur in der <a href=\"%s\" target=\"_blank\">Pro Version von Associated Posts</a>."
-
-#: ../wp-plugin-associated-posts-lite.php:578
-msgctxt "Link to the authors website"
-msgid "http://dennishoppe.de/en/wordpress-plugins/associated-posts-pro"
-msgstr "http://dennishoppe.de/wordpress-plugins/associated-posts-pro"
-
-#: ../wp-plugin-associated-posts-lite.php:604
-#: ../wp-plugin-associated-posts-lite.php:615
-msgid "Displays the associated posts of the current post in the sidebar."
-msgstr "Zeigt die assoziierten Artikel des aktuellen Beitrags an."
-
-#: ../wp-plugin-associated-posts-lite.php:663
-msgid "Please activate the Associated Posts Plugin!"
-msgstr "Bitte aktivieren Sie zuerst das \"Associated Posts\" Plugin!"
-
-#: ../wp-plugin-associated-posts-lite.php:669
-msgid "Title"
-msgstr "Titel"
-
-#: ../wp-plugin-associated-posts-lite.php:673
-#: ../meta-box.php:91
-msgid "Template"
-msgstr "Vorlage"
 
 #: ../meta-box.php:15
 #, php-format
@@ -157,53 +93,17 @@ msgstr "Absteigend"
 msgid "Ascending"
 msgstr "Aufsteigend"
 
+#: ../meta-box.php:91
+#: ../wp-plugin-associated-posts-lite.php:615
+msgid "Template"
+msgstr "Vorlage"
+
 #: ../meta-box.php:104
 #: ../meta-box.php:106
 #: ../option-box-templates.php:17
 #: ../option-box-templates.php:19
 msgid "by"
 msgstr "von"
-
-#: ../option-box-position.php:3
-msgid "Append the associated posts to the pages content."
-msgstr "Die assoziierten Artikel an das Seitenende anhängen."
-
-#: ../option-box-position.php:8
-msgid "Prepend the associated posts to the pages content."
-msgstr "Die assoziierten Artikel an den Seitenanfang stellen."
-
-#: ../option-box-position.php:13
-msgid "<b>Do not</b> show the associated posts automatically. (In this case you have to add the short code manually.)"
-msgstr "Die assoziierten Artikel <b>nicht</b> automatisch anzeigen. (In diesem Fall müssen Sie den ShortCode selbst einfügen.)"
-
-#: ../option-box-position.php:17
-msgid "Content filter priority"
-msgstr "Inhaltsfilterpriorität"
-
-#: ../option-box-position.php:19
-msgid "Appoints the priority of the auto added ShortCode in relation to other plugins."
-msgstr "Gibt die Priorität des automatisch hinzugefügten ShortCodes in Relation zu den anderen Plugins an."
-
-#: ../option-box-templates.php:2
-msgid "Are you sure you want to delete this template?"
-msgstr "Sind Sie sicher dass Sie diese Vorlage löschen möchten?"
-
-#: ../option-box-templates.php:21
-msgid "Delete this template"
-msgstr "Vorlage löschen"
-
-#: ../option-box-templates.php:21
-msgid "Delete"
-msgstr "Löschen"
-
-#: ../option-box-templates.php:23
-#, php-format
-msgid "Found in <em>%s</em>."
-msgstr "Gefunden in <em>%s</em>."
-
-#: ../option-box-templates.php:29
-msgid "You can tick a template to make it the default one."
-msgstr "Sie können eine Vorlage auswählen um sie als Standard zu nutzen."
 
 #: ../option-box-interface.php:1
 msgid "Please select the sections where you want to have an association meta box."
@@ -213,24 +113,18 @@ msgstr "Bitte wählen Sie die Bereiche in denen Sie eine Assoziationsmöglichkei
 msgid "After you have done all your selections of course you can hide the boxes. Your selections will be stored. So you could hide the meta boxes from your client."
 msgstr "Nachdem Sie alle Assoziationen gewählt haben können Sie die Boxen wieder deaktivieren. Ihre Auswahl bleibt erhalten. Auf diese Weise können Sie die Oberfläche vor Ihrem Klienten verstecken."
 
-#: ../option-box-taxonomies.php:1
-msgid "Please select the taxonomies you need to select and filter your associated posts."
-msgstr "Bitte wählen Sie die Klassifizierungen nach denen Sie Ihre Auswahl treffen möchten."
+#: ../options-page.php:3
+#: ../wp-plugin-associated-posts-lite.php:117
+#: ../wp-plugin-associated-posts-lite.php:188
+#: ../wp-plugin-associated-posts-lite.php:545
+#: ../wp-plugin-associated-posts-lite.php:556
+#: ../wp-plugin-associated-posts-lite.php:568
+msgid "Associated Posts"
+msgstr "Assoziierte Artikel"
 
-#: ../option-box-taxonomies.php:7
-#, php-format
-msgid "%s by the creator"
-msgstr "%s durch den Ersteller"
-
-#: ../option-box-taxonomies.php:12
-#, php-format
-msgid "%1$s by %2$s"
-msgstr "%1$s durch %2$s"
-
-#: ../option-box-taxonomies.php:17
-#, php-format
-msgid "Select %s explicitly"
-msgstr "%s explizit auswählen"
+#: ../meta-notice-box.php:2
+msgid "There you can associate all types of content with each other. Unfortunately you are using the <i>Lite</i> Edition yet. Why not switching to Pro? :)"
+msgstr "Dort können Sie alle Inhaltstypen miteinander verbinden. Leider nutzen Sie noch die <i>Lite</i> Version. Warum nicht zu Pro wechseln? :)"
 
 #: ../option-box-add-template.php:1
 msgid "Install a template in ZIP format"
@@ -268,6 +162,38 @@ msgstr "nicht zwingend"
 msgid "Install template and save all options"
 msgstr "Vorlage installieren und alle Einstellungen sichern"
 
+#: ../option-box-templates.php:2
+msgid "Are you sure you want to delete this template?"
+msgstr "Sind Sie sicher dass Sie diese Vorlage löschen möchten?"
+
+#: ../option-box-templates.php:22
+#, php-format
+msgid "Found in <em>%s</em>."
+msgstr "Gefunden in <em>%s</em>."
+
+#: ../option-box-templates.php:28
+msgid "You can tick a template to make it the default one."
+msgstr "Sie können eine Vorlage auswählen um sie als Standard zu nutzen."
+
+#: ../option-box-taxonomies.php:1
+msgid "Please select the taxonomies you need to select and filter your associated posts."
+msgstr "Bitte wählen Sie die Klassifizierungen nach denen Sie Ihre Auswahl treffen möchten."
+
+#: ../option-box-taxonomies.php:7
+#, php-format
+msgid "%s by the creator"
+msgstr "%s durch den Ersteller"
+
+#: ../option-box-taxonomies.php:12
+#, php-format
+msgid "%1$s by %2$s"
+msgstr "%1$s durch %2$s"
+
+#: ../option-box-taxonomies.php:17
+#, php-format
+msgid "Select %s explicitly"
+msgstr "%s explizit auswählen"
+
 #: ../option-box-miscellaneous.php:3
 msgid "Show the full path for hierarchical taxonomies."
 msgstr "Zeige den vollen Pfad für hierarchische Klassifikationen."
@@ -276,9 +202,82 @@ msgstr "Zeige den vollen Pfad für hierarchische Klassifikationen."
 msgid "Display the associated posts only on single view."
 msgstr "Zeige die assoziierten Artikel nur in der Einzelansicht der entsprechenden Seite."
 
-#: ../meta-notice-box.php:2
-msgid "There you can associate all types of content with each other. Unfortunately you are using the <i>Lite</i> Edition yet. Why not switching to Pro? :)"
-msgstr "Dort können Sie alle Inhaltstypen miteinander verbinden. Leider nutzen Sie noch die <i>Lite</i> Version. Warum nicht zu Pro wechseln? :)"
+#: ../wp-plugin-associated-posts-lite.php:116
+msgid "Associated Posts Options"
+msgstr "Einstellungen für Assoziierte Artikel"
+
+#: ../wp-plugin-associated-posts-lite.php:124
+msgid "Position"
+msgstr "Position"
+
+#: ../wp-plugin-associated-posts-lite.php:125
+msgid "Templates"
+msgstr "Vorlagen"
+
+#: ../wp-plugin-associated-posts-lite.php:126
+msgid "Add a Template"
+msgstr "Vorlage hinzufügen"
+
+#: ../wp-plugin-associated-posts-lite.php:127
+msgid "Association Interface"
+msgstr "Assoziationsoberfläche"
+
+#: ../wp-plugin-associated-posts-lite.php:128
+msgid "Selectable Taxonomies"
+msgstr "Auswählbare Klassifizierungen"
+
+#: ../wp-plugin-associated-posts-lite.php:129
+msgid "Miscellaneous"
+msgstr "Sonstiges"
+
+#: ../wp-plugin-associated-posts-lite.php:519
+#, php-format
+msgid "Sorry, this feature is only available in the <a href=\"%s\" target=\"_blank\">Pro Version of Associated Posts</a>."
+msgstr "Entschuldigung, diese Funktion gibt es nur in der <a href=\"%s\" target=\"_blank\">Pro Version von Associated Posts</a>."
+
+#: ../wp-plugin-associated-posts-lite.php:520
+msgctxt "Link to the authors website"
+msgid "http://dennishoppe.de/en/wordpress-plugins/associated-posts-pro"
+msgstr "http://dennishoppe.de/wordpress-plugins/associated-posts-pro"
+
+#: ../wp-plugin-associated-posts-lite.php:546
+#: ../wp-plugin-associated-posts-lite.php:557
+msgid "Displays the associated posts of the current post in the sidebar."
+msgstr "Zeigt die assoziierten Artikel des aktuellen Beitrags an."
+
+#: ../wp-plugin-associated-posts-lite.php:605
+msgid "Please activate the Associated Posts Plugin!"
+msgstr "Bitte aktivieren Sie zuerst das \"Associated Posts\" Plugin!"
+
+#: ../wp-plugin-associated-posts-lite.php:611
+msgid "Title"
+msgstr "Titel"
+
+#: ../option-box-position.php:3
+msgid "Append the associated posts to the pages content."
+msgstr "Die assoziierten Artikel an das Seitenende anhängen."
+
+#: ../option-box-position.php:8
+msgid "Prepend the associated posts to the pages content."
+msgstr "Die assoziierten Artikel an den Seitenanfang stellen."
+
+#: ../option-box-position.php:13
+msgid "<b>Do not</b> show the associated posts automatically. (In this case you have to add the short code manually.)"
+msgstr "Die assoziierten Artikel <b>nicht</b> automatisch anzeigen. (In diesem Fall müssen Sie den ShortCode selbst einfügen.)"
+
+#: ../option-box-position.php:17
+msgid "Content filter priority"
+msgstr "Inhaltsfilterpriorität"
+
+#: ../option-box-position.php:19
+msgid "Appoints the priority of the auto added ShortCode in relation to other plugins."
+msgstr "Gibt die Priorität des automatisch hinzugefügten ShortCodes in Relation zu den anderen Plugins an."
+
+#~ msgid "Delete this template"
+#~ msgstr "Vorlage löschen"
+
+#~ msgid "Delete"
+#~ msgstr "Löschen"
 
 #~ msgid "Sticky Posts:"
 #~ msgstr "Sticky Posts:"
@@ -324,8 +323,8 @@ msgstr "Dort können Sie alle Inhaltstypen miteinander verbinden. Leider nutzen 
 
 #~ msgid "Add to my selection: All %1$s with at least one of these %2$s."
 #~ msgstr ""
-#~ "In meine Auswahl aufnehmen: Alle %1$s mit mindestens einem der gewählten %"
-#~ "2$s."
+#~ "In meine Auswahl aufnehmen: Alle %1$s mit mindestens einem der gewählten "
+#~ "%2$s."
 
 #~ msgid "Filter my selection: Only %1$s with at least one of these %2$s."
 #~ msgstr "Auswahl filtern: Nur %1$s mit mindestens einem der gewählten %2$s."
